[package]
name = "ws-dm"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["macros", "ws"] }
axum-server = { version = "0.7.2", features = ["tls-rustls-no-provider"] }
dashmap = "6.1.0"
rustls = { version = "0.23.28", default-features = false, features = ["ring"] }
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6.6", features = ["compression-br"] }
